# ChangeLog for media-sound/rosegarden
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Mar 2013; Dominique Michel <dominique@tuxfamily.org>;
  Moved qt depend to dev-qt in both ebuilds

  09 Feb 2011; Frieder Buerzele <evermind@tuxfamily.org>;
  +rosegarden-11.02.ebuild:
  bumped

  15 May 2010; Viktor Lazarev <taurus101v@gmail.com>
  -rosegarden-1.0-r2.ebuild, -rosegarden-1.2.3-r2.ebuild,
  -rosegarden-1.2.4.ebuild, -rosegarden-1.4.0.ebuild,
  -rosegarden-1.5.0-r1.ebuild, -rosegarden-1.5.1.ebuild,
  -rosegarden-1.6.0.ebuild, -rosegarden-1.6.1.ebuild,
  -files/rosegarden-1.6.1-asneeded.patch,
  -files/rosegarden-1.6.1.desktop.diff, -rosegarden-1.7.0.ebuild,
  -files/4.1.0-dssi.patch, -rosegarden-2.9999.ebuild,
  rosegarden-9999.ebuild, -files/rosegarden-colour.patch, metadata.xml:
  removed ancient ebuilds, corrected dependencies, some cleanup

  04 Aug 2009; Dominique Michel <dominique@tuxfamily.org>;
  Removed alsa-lib midi USE flag check from 1.7.0

  02 May 2008; Frieder Buerzele <evermind@tuxfamily.org>;
  +files/rosegarden-1.6.1-asneeded.patch,
  +files/rosegarden-1.6.1.desktop.diff, +rosegarden-1.7.0.ebuild:
  bumped rosegarden

  19 Jan 2008; Frieder Buerzele <evermind@tuxfamily.org>;
  -rosegarden-1.5.0.ebuild, rosegarden-1.5.0-r1.ebuild,
  rosegarden-1.5.1.ebuild, rosegarden-1.6.0.ebuild, rosegarden-1.6.1.ebuild,
  rosegarden-9999.ebuild:
  BUG: http://forums.gentoo.org/viewtopic.php?p=4719173#4719173
  fixed blocking: kdialog vs. kdebase

  24 Dec 2007; Frieder Buerzele <evermind@tuxfamily.org> ChangeLog:
  bumped rosegarde-1.6.1

  17 Dec 2007; Thomas Kuther <gimpel@sonnenkinder.org> ChangeLog:
  added a changelog
