@@ -1,3 +1,3 @@
-EBUILD rosegarden-9999.ebuild 2424 SHA256 53726a5fb385787edb11de3f78858d5b7fd41f56230f2dbb6a53cc5d07a01d2e SHA512 2e9aa1640323bf166340b39ef8ab31d5e16a94879e965ca21f09692189691d84163d50e21855836efd3d37a5d7057d9832b2f5562bb6c2d89ee1e3c022f7283a WHIRLPOOL 92b52262aecf07bb9e35e2e387301bdcf565049b4c5b2e2c5323897d757d7af8024034fb2bdb9a93b03070199af078bf08a904f952aebc47ce78d7745dd223dd
-MISC ChangeLog 1696 SHA256 44031636459445efc4adedc2c2dbcdc011ce00525756112f678d7f685cd26bf4 SHA512 f4b139322ae8bd022a3f41799ae3f259d938db506fe026602b2f7f21f9f3bb9a94433e2fec23e942f267355700ba644cd587d6b53e7e9fad2a2d16c87aa95650 WHIRLPOOL c098b9c235339514da7ef162ad608c8bfa00c485858f7bc044b0e7df1421981476873bbf36d0f96c5afea5c8fea0b4289d6589ecbe6b47771f13c25c15011a89
+EBUILD rosegarden-9999.ebuild 1975 SHA256 5d1c786c8bb5a2eabd22fc71008221152c7885ca15e24868c105bcbb7deb6016 SHA512 6dbddf31c108df7641c4fa487766e41bce6f036942415e6dc1155d3f3f453476a331e4653406c49c8d8c02e79febb661f40cec5fdf1a36b7420aee6deb93872b WHIRLPOOL ce1aed7d81f27283f31bf2702b174b44fe941d2c50b5454af0611d36e3b20ae1b35e4131c07b7b4bbbf9e0db8dd7754250bb92de8153041c08a8c6f69d1a552f
+MISC ChangeLog 2017 SHA256 385b41cfa50190046c5ff0be08f087fc42f67b7d6755887c93319a1ba2758e7c SHA512 400217633775aef18ad4bcee827c0dede64beae2a59c13451837dbe5489bbd0a00b20fb4ff9579b37a9cc8b3f005eed3f80ed3c09697a6bfb0a71cf4b41220a3 WHIRLPOOL 0e11f9d2456b8f3a7e497124c4c00faecd18186f449e9aa0eee38f08541f6ed6b64e069a8029b8075a2625a182d80550c122a493659148416fd259a6d27cffbc
 MISC metadata.xml 346 SHA256 d35577c3726794038b046f4bbce32c152ed8b7b9e00a882dfc31a04307103098 SHA512 a39da73070481e212cbb7e2ffe4b460d4dac4ffcfd22f4a91c417113f5a1ffd3c122f0b87c523460875ee63e7250d93c0ed918a3f62529fc1602a2db3bb7b6fa WHIRLPOOL bf1a9661619b9ecc1992cf1cbec447f6f93d6f3e2b4734999900d5bac33e8a51f9f05e7588fbaafaa7ac443c9d38a5561ec34eef438ec3e447c12d75c6513f92
