@@ -2,6 +2,16 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Jun 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  rosegarden-9999.ebuild:
+  EAPI 5 and autotools-utils eclass.
+  Updated repository address.
+  Removed alsa and jack USE flags.
+  Rearrange dependencies alphabetically.
+  Removed LANGS variable.
+  Fix typo.
+  Do not append -ggdb to CFLAGS if USE="debug".
+
   09 Mar 2013; Dominique Michel <dominique@tuxfamily.org>;
   Moved qt depend to dev-qt in both ebuilds
 
